--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -165,6 +165,7 @@
 @import "./partials/params.scss";
 @import "./partials/mixins.scss";
 @import "./partials/animations.scss";
+@import "./modal.scss";
 
 :root {
   --font-family: "Jost";
@@ -485,7 +486,7 @@ text-align: center;
 background: linear-gradient(135deg, #fc6a16 0%, #fa9639 100%);
 background-clip: text;
 -webkit-background-clip: text;
--webkit-text-fill-color: transparent;
+-webkit-text-fill-color: transparent; 
 }
 .stats__text {
   font-family: var(--font-family);
@@ -524,4 +525,321 @@ transform: translateX(100px);
 font-weight: 400;
 font-size: 16px;
 color: #2e333e;
+}
+
+.services {
+  padding: 45px 0;
+  background: #f9f9f9;
+}
+.titlecustom {
+}
+.services__items {
+  display: flex;
+  gap: 26px;
+  flex: 1;;
+}
+.services__item {
+  flex: 1;;
+}
+.services__wrapper {
+}
+.services__image {
+  min-height: 249px;
+  margin-bottom: 15px;
+  img {
+    height: 249px;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+  }
+}
+.services__main {
+  display: flex;
+}
+.services__number {
+  font-family: var(--font-family);
+font-weight: 500;
+font-size: 12px;
+color: rgba(46, 51, 62, 0.3);
+
+position: relative;
+&:after {
+  content: "";
+  width: 1px;
+  height: 64px;
+  position: absolute;
+  left: 0;
+  top: 22px;
+  background: linear-gradient(180deg, #d9d9d9 17%, rgba(217, 217, 217, 0) 100%);
+}
+}
+.services__title {
+  font-family: var(--font-family);
+font-weight: 600;
+font-size: 16px;
+color: #2e333e;
+margin-left: 3px;
+margin-top: 22px;
+}
+h2 {
+  font-family: var(--font-family);
+font-weight: 700;
+font-size: 36px;
+line-height: 100%;
+color: #2e333e;
+margin-top: 0;margin-bottom: 0;
+}
+
+.geomap {
+  margin-bottom: 65px;
+}
+
+.formblock {
+  margin: 74px 0;
+}
+.formblock__wrapper {
+  height: 476px;
+  display: flex;
+  background: #f9f9f9;
+  border-radius: 12px;
+  align-items: center;
+  justify-content: center;
+
+}
+.formblock__image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  img {
+    max-height: unset;
+    max-width: unset;
+    position: absolute;
+    left: -60px;
+    bottom: 0;
+    z-index: 1;
+  }
+}
+.formblock__main {
+  max-width: 750px;
+  min-width: 750px;
+  margin-right: 100px;
+}
+.formblock__title {
+  font-family: var(--font-family);
+font-weight: 700;
+font-size: 36px;
+line-height: 100%;
+color: #fc6a16;
+margin-bottom: 25px;
+}
+.formblock__text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  color: #2e333e;
+  margin-bottom: 32px;
+}
+.formblock__form {
+}
+.formblock__row {
+  display: flex;
+  gap: 14px;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.formblock__input {
+  width: calc(50% - 7px);
+  input {
+    width: 100%;
+    border: 1px solid #eee;
+border-radius: 6px;
+    display: block;padding: 17px 26px;
+    background: #fff;
+    font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  color: rgba(35, 33, 40, 1);
+  }
+}
+.formblock__footer {
+  margin-top: 33px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.formblock__confirm {
+  font-family: var(--font-family);
+font-weight: 400;
+font-size: 14px;
+line-height: 120%;
+color: rgba(35, 33, 40, 0.4);
+max-width: 423px;
+a {
+  text-decoration: underline;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 120%;
+  color: rgba(35, 33, 40, 0.4);
+
+  &:hover {
+    color: rgba(35, 33, 40, 1);
+  }
+}
+}
+.formblock__button {
+}
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  color: rgba(35, 33, 40, 0.4);
+}
+::-moz-placeholder { /* Firefox 19+ */
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  color: rgba(35, 33, 40, 0.4);
+}
+:-ms-input-placeholder { /* IE 10+ */
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  color: rgba(35, 33, 40, 0.4);
+}
+:-moz-placeholder { /* Firefox 18- */
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  color: rgba(35, 33, 40, 0.4);
+}
+
+button.btn_main {
+  border: none;
+}
+
+.formblock__button {
+  .btn_main {
+    cursor: pointer;
+    min-width: 246px;
+    height: 56px;
+    padding: 0;
+    background: #fc6a16;
+  }
+}
+
+.contactsblock {
+}
+.contactsblock__wrapper {
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.contactsblock__main {
+  margin-right: 50px;
+  max-width: 394px;
+  min-width: 394px;
+}
+.contactsblock__title {
+}
+.customtitle {
+}
+.contactsblock__items {
+}
+.contactsblock__item {
+  margin-bottom: 26px;
+}
+.contactsblock__block {
+}
+.contactsblock__icon {
+  margin-right: 12px;
+  max-width: 26px;
+  min-width: 26px;
+
+  img {
+    display: block;
+  }
+
+}
+.contactsblock__content {
+  font-family: var(--font-family);
+font-weight: 400;
+font-size: 16px;
+color: #2e333e;
+ 
+  a {
+    font-family: var(--font-family);
+font-weight: 700;
+font-size: 16px;
+text-transform: uppercase;
+color: #2e333e;
+  }
+}
+.contactsblock__map {
+}
+.contactmap {
+}
+
+.contactsblock__block_row {
+  display: flex;
+  align-items: center;
+  gap: 22px;
+}
+
+.contactsblock__title {
+  .titlecustom {
+    padding-bottom: 35px;
+
+    &:after {
+      left: 0;
+      text-align: left;
+
+    }
+    h2 {
+      font-size: 36px;
+      text-align: left;
+    }
+  }
+}
+
+.contactsblock__block {
+  display: flex;
+  align-items: center;
+}
+
+.contactsblock__col {
+  display: flex;
+  align-items: center;
+}
+
+.contactsblock__map {
+  width: 100%;
+  max-width: 947px;
+}
+
+.contactmap  {
+  iframe {
+    width: 100%;
+  }
+}
+
+a.bordered {
+  border-bottom: 2px solid $orange;
+  text-transform: none;
+}
+
+.contactsblock__content {
+  b {
+    font-weight: 500;
+
+  }
+  span {
+    color: rgba(46, 51, 62, 0.4);
+  }
 }
