--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -33,7 +33,93 @@
         <div class="modal-body">
           <div class="modaltitle">Политика обработки персональных данных</div><!-- /.modaltitle -->
           <div class="modalcontent text">
-            <p class="text-center">Политика обработки персональных данных</p>
+            <div class="pagetext">
+        
+              <p>Политика в&nbsp;отношении обработки персональных данных <br>
+                1. Общие положения<br>
+                Настоящая политика обработки персональных данных составлена в&nbsp;соответствии с&nbsp;требованиями Федерального
+                закона от&nbsp;27.07.2006. №&nbsp;152-ФЗ «О&nbsp;персональных данных» (далее&nbsp;— Закон о&nbsp;персональных
+                данных) и&nbsp;определяет порядок обработки персональных данных и&nbsp;меры по&nbsp;обеспечению безопасности
+                персональных данных, предпринимаемые&nbsp;Михайловым Иваном Сергеевичем&nbsp;(далее&nbsp;— Оператор).
+                <br> 1.1. Оператор ставит своей важнейшей целью и&nbsp;условием осуществления своей деятельности соблюдение прав и&nbsp;свобод
+                человека и&nbsp;гражданина при обработке его персональных данных, в&nbsp;том числе защиты прав на&nbsp;неприкосновенность
+                частной жизни, личную и&nbsp;семейную тайну.
+                <br> 1.2. Настоящая политика Оператора в&nbsp;отношении обработки персональных данных (далее&nbsp;— Политика)
+                применяется ко&nbsp;всей информации, которую Оператор может получить о&nbsp;посетителях веб-сайта&nbsp;httpsː//fashionmarket.pro.
+                <br> 2. Основные понятия, используемые в&nbsp;Политике
+                <br> 2.1. Автоматизированная обработка персональных данных&nbsp;— обработка персональных данных с&nbsp;помощью
+                средств вычислительной техники.
+                <br> 2.2. Блокирование персональных данных&nbsp;— временное прекращение обработки персональных данных (за&nbsp;исключением
+                случаев, если обработка необходима для уточнения персональных данных).
+                <br> 2.3. Веб-сайт&nbsp;— совокупность графических и&nbsp;информационных материалов, а&nbsp;также программ для ЭВМ и&nbsp;баз
+                данных, обеспечивающих их&nbsp;доступность в&nbsp;сети интернет по&nbsp;сетевому адресу&nbsp;httpsː//fashionmarket.pro.
+                <br> 2.4. Информационная система персональных данных&nbsp;— совокупность содержащихся в&nbsp;базах данных
+                персональных данных и&nbsp;обеспечивающих их&nbsp;обработку информационных технологий и&nbsp;технических средств.
+                <br> 2.5. Обезличивание персональных данных&nbsp;— действия, в&nbsp;результате которых невозможно определить без
+                использования дополнительной информации принадлежность персональных данных конкретному Пользователю или иному
+                субъекту персональных данных.
+                <br> 2.6. Обработка персональных данных&nbsp;— любое действие (операция) или совокупность действий (операций),
+                совершаемых с&nbsp;использованием средств автоматизации или без использования таких средств с&nbsp;персональными
+                данными, включая сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение,
+                использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление,
+                уничтожение персональных данных.
+                <br> 2.7. Оператор&nbsp;— государственный орган, муниципальный орган, юридическое или физическое лицо,
+                самостоятельно или совместно с&nbsp;другими лицами организующие и/или&nbsp;осуществляющие обработку персональных
+                данных, а&nbsp;также определяющие цели обработки персональных данных, состав персональных данных, подлежащих
+                обработке, действия (операции), совершаемые с&nbsp;персональными данными.
+                <br> 2.8. Персональные данные&nbsp;— любая информация, относящаяся прямо или косвенно к&nbsp;определенному или
+                определяемому Пользователю веб-сайта&nbsp;httpsː//fashionmarket.pro.
+                <br> 2.9. Персональные данные, разрешенные субъектом персональных данных для распространения,&nbsp;— персональные
+                данные, доступ неограниченного круга лиц к&nbsp;которым предоставлен субъектом персональных данных путем дачи
+                согласия на&nbsp;обработку персональных данных, разрешенных субъектом персональных данных для распространения в&nbsp;порядке,
+                предусмотренном Законом о&nbsp;персональных данных (далее&nbsp;— персональные данные, разрешенные для
+                распространения).
+                <br> 2.10. Пользователь&nbsp;— любой посетитель веб-сайта&nbsp;httpsː//fashionmarket.pro.
+                <br> 2.11. Предоставление персональных данных&nbsp;— действия, направленные на&nbsp;раскрытие персональных данных
+                определенному лицу или определенному кругу лиц.
+                <br> 2.12. Распространение персональных данных&nbsp;— любые действия, направленные на&nbsp;раскрытие персональных
+                данных неопределенному кругу лиц (передача персональных данных) или на&nbsp;ознакомление с&nbsp;персональными
+                данными неограниченного круга лиц, в&nbsp;том числе обнародование персональных данных в&nbsp;средствах массовой
+                информации, размещение в&nbsp;информационно-телекоммуникационных сетях или предоставление доступа к&nbsp;персональным
+                данным каким-либо иным способом.
+                <br> 2.13. Трансграничная передача персональных данных&nbsp;— передача персональных данных на&nbsp;территорию
+                иностранного государства органу власти иностранного государства, иностранному физическому или иностранному
+                юридическому лицу.
+                <br> 2.14. Уничтожение персональных данных&nbsp;— любые действия, в&nbsp;результате которых персональные данные
+                уничтожаются безвозвратно с&nbsp;невозможностью дальнейшего восстановления содержания персональных данных в&nbsp;информационной
+                системе персональных данных и/или&nbsp;уничтожаются материальные носители персональных данных.
+                <br> 3. Основные права и&nbsp;обязанности Оператора
+                <br> 3.1. Оператор имеет право:
+                <br> —&nbsp;получать от&nbsp;субъекта персональных данных достоверные информацию и/или&nbsp;документы, содержащие
+                персональные данные;
+                <br> —&nbsp;в&nbsp;случае отзыва субъектом персональных данных согласия на&nbsp;обработку персональных данных, а&nbsp;также,
+                направления обращения с&nbsp;требованием о&nbsp;прекращении обработки персональных данных, Оператор вправе
+                продолжить обработку персональных данных без согласия субъекта персональных данных при наличии оснований, указанных
+                в&nbsp;Законе о&nbsp;персональных данных;
+                <br> —&nbsp;самостоятельно определять состав и&nbsp;перечень мер, необходимых и&nbsp;достаточных для обеспечения
+                выполнения обязанностей, предусмотренных Законом о&nbsp;персональных данных и&nbsp;принятыми в&nbsp;соответствии с&nbsp;ним
+                нормативными правовыми актами, если иное не&nbsp;предусмотрено Законом о&nbsp;персональных данных или другими
+                федеральными законами.
+                <br> 3.2. Оператор обязан:
+                <br> —&nbsp;предоставлять субъекту персональных данных по&nbsp;его просьбе информацию, касающуюся обработки его
+                персональных данных;
+                <br> —&nbsp;организовывать обработку персональных данных в&nbsp;порядке, установленном действующим законодательством&nbsp;РФ;
+                <br> —&nbsp;отвечать на&nbsp;обращения и&nbsp;запросы субъектов персональных данных и&nbsp;их&nbsp;законных
+                представителей в&nbsp;соответствии с&nbsp;требованиями Закона о&nbsp;персональных данных;
+                <br> —&nbsp;сообщать в&nbsp;уполномоченный орган по&nbsp;защите прав субъектов персональных данных по&nbsp;запросу
+                этого органа необходимую информацию в&nbsp;течение 10&nbsp;дней с&nbsp;даты получения такого запроса;
+                <br> —&nbsp;публиковать или иным образом обеспечивать неограниченный доступ к&nbsp;настоящей Политике в&nbsp;отношении
+                обработки персональных данных;
+                <br> —&nbsp;принимать правовые, организационные и&nbsp;технические меры для защиты персональных данных от&nbsp;неправомерного
+                или случайного доступа к&nbsp;ним, уничтожения, изменения, блокирования, копирования, предоставления,
+                распространения персональных данных, а&nbsp;также от&nbsp;иных неправомерных действий в&nbsp;отношении персональных
+                данных;
+                <br> —&nbsp;прекратить передачу (распространение, предоставление, доступ) персональных данных, прекратить обработку
+                и&nbsp;уничтожить персональные данные в&nbsp;порядке и&nbsp;случаях, предусмотренных Законом о&nbsp;персональных
+                данных;
+                <br> —&nbsp;исполнять иные обязанности, предусмотренные Законом о&nbsp;персональных данных.
+              </p>
+              </div>
           </div><!-- /.modalcontent -->
           
 
