--- a/src/scss/partials/_animations.scss
+++ b/src/scss/partials/_animations.scss
@@ -23,12 +23,6 @@
   }
 }
 
-@-webkit-keyframes slideme {
-  0% { left: -30px; margin-left: 0px; }
-  30% { left: 110%; margin-left: 80px; }
-  100% { left: 110%; margin-left: 80px; } 
-}
-
 @keyframes slide-in-bottom {
   0% {
     opacity: 0;
@@ -98,26 +92,31 @@
     transform: translateX(0)
   }
 }
-@-webkit-keyframes fade-in {
+@keyframes fadeInUpSmall {
   0% {
     opacity: 0;
-  
-  }
-
-  to {
-    opacity: 1;
- 
-  }
+    transform: translateY(45px) scale(.95);
 }
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
+100% {
+  opacity: 1;
+  transform: translateY(0) scale(1);
+}
+}
 
-  to {
-    opacity: 1;
-  }
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  opacity: 1;
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  -ms-transition: none !important;
+  transition: none !important;
+}
+
+.fadeInUpSmall {
+  animation-name: fadeInUpSmall;
 }
 
 .slide-in-bottom {
@@ -134,23 +133,33 @@
   -webkit-animation: slide-in-left .5s cubic-bezier(.25, .46, .45, .94) both;
   animation: slide-in-left .5s cubic-bezier(.25, .46, .45, .94) both
 }
-.fade-in {
-  -webkit-animation: fade-in 1.5s linear 0.5s both;
-  animation: fade-in 1.5s linear 0.5s both
+
+@-webkit-keyframes slideme {
+  0% { left: -30px; margin-left: 0px; }
+  30% { left: 110%; margin-left: 80px; }
+  100% { left: 110%; margin-left: 80px; } 
 }
-.fade-in1 {
-  -webkit-animation: fade-in 1.5s linear 1s both;
-  animation: fade-in 1.5s linear 1s both
+
+@keyframes videoLinkScale {
+  0% {
+    transform: scale(1);
+
 }
-.fade-in2 {
-  -webkit-animation: fade-in 1.5s linear 1.5s both;
-  animation: fade-in 1.5s linear 1.5s both
+30% {
+    transform: scale(.9);
+
 }
-.fade-in3 {
-  -webkit-animation: fade-in 1.5s linear 2s both;
-  animation: fade-in 1.5s linear 2s both
+50% {
+    transform: scale(1.05);
+
 }
-.fade-in4 {
-  -webkit-animation: fade-in 1.5s linear 2.5s both;
-  animation: fade-in 1.5s linear 2.5s both
+
+80% {
+    transform: scale(.9);
+
+}
+100% {
+    transform: scale(1);
+
+}
 }
