--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -1384,6 +1384,39 @@ line-height: 120%;
   #header {
     z-index: 99;
   }
+
+  .mobilefooter {
+    position: absolute;
+    bottom: 120px;
+    left: 18px;
+    right: 18px;
+    width: calc(100% - 36px);
+
+    
+  .headermain__right {
+    display: block;
+  }
+  .mobilemenu .phonenumber {
+    font-size: 20px;
+  }
+  .mobilemenu .phonetext {
+    color: #2e333e;
+    font-size: 14px;
+  }
+  .contacts__phone {
+    margin-bottom: 28px;
+  }
+  .contacts__button {
+    margin-left: 0;
+    width: 100%;
+    a {
+      width: 100%;
+      display: block;
+    }
+  }
+  }
+
+
   }
 
   @media (max-width: 767px) {
